# platform-services

./: .gitignore  CLAUDE.md  MIGRATION.md  Makefile  platform.yml
.github/workflows/: ci.yml  deploy.yml
apps/: Cargo.toml
apps/auth-trigger/: package-lock.json
apps/auth-trigger/src/: main.rs
apps/ci-ingest/: package-lock.json  package.json
apps/ci-ingest-rs/: Cargo.toml
apps/ci-ingest-rs/src/: db.rs  main.rs
apps/ci-ingest-rs/tests/: integration.rs
apps/ci-ingest/src/: handler.ts
apps/db-migrate/: Cargo.toml  package-lock.json  package.json
apps/db-migrate-rs/: Cargo.toml
apps/db-migrate-rs/src/: main.rs  ops.rs  storage.rs
apps/db-migrate-rs/tests/: integration.rs
apps/db-migrate/src/: handler.ts  main.rs
apps/komodo-proxy-rs/: Cargo.toml
apps/komodo-proxy-rs/src/: main.rs
apps/komodo-proxy/src/: main.rs
apps/sonarqube-bootstrap-rs/: Cargo.toml
apps/truenas-db-manage-rs/: Cargo.toml
apps/truenas-db-manage-rs/src/: main.rs
backend/: Cargo.toml
backend/auth-trigger/: Cargo.toml
backend/ci-ingest/: Cargo.toml
backend/cors-handler/: Cargo.toml
backend/cors-handler/src/: main.rs
backend/db-migrate-truenas/: Cargo.toml
backend/db-migrate/src/: lib.rs  ops.rs
backend/og-server/: Cargo.toml
backend/og-server/src/: main.rs
db/migrations/: 001_create_ci_builds.sql
db/migrations/rollback/: 001_create_ci_builds.sql
infrastructure/terraform/: auth-trigger.tf  ci-ingest.tf  cors.tf  db-migrate-truenas.tf  db-migrate.tf  dns.tf  identity.tf  komodo-proxy.tf  locals.tf  main.tf  observability.tf  og-server.tf  outputs.tf  rds.tf  sonarqube-bootstrap.tf  ssm.tf  truenas-db-manage.tf  users.tf  variables.tf
infrastructure/terraform/modules/cognito/: main.tf
scripts/: create-cognito-user.sh  deploy.sh
