[workspace]
members = ["db-migrate-rs", "ci-ingest-rs"]
resolver = "2"

[workspace.dependencies]
aws-config = "1"
aws-sdk-s3 = "1"
lambda_runtime = "0.13"
lambda_http = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4"] }
tokio-postgres-rustls = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
webpki-roots = "0.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
