[package]
name = "ci-ingest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ci-ingest"
path = "src/main.rs"

[dependencies]
aws-config.workspace = true
lambda_http.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
tokio-postgres-rustls.workspace = true
rustls.workspace = true
webpki-roots.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
