[package]
name = "db-migrate"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "db-migrate"
path = "src/main.rs"

[dependencies]
aws-config.workspace = true
aws-sdk-s3.workspace = true
lambda_runtime.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
tokio-postgres-rustls.workspace = true
rustls.workspace = true
webpki-roots.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
