[package]
name = "db-migrate"
version = "0.1.0"
edition = "2021"

[lib]
name = "db_migrate"
path = "src/lib.rs"

[[bin]]
name = "db-migrate"
path = "src/main.rs"

[dependencies]
aws-config.workspace = true
aws-sdk-s3.workspace = true
aws-sdk-ssm.workspace = true
rand.workspace = true
lambda_runtime.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
tokio-postgres-rustls.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
rustls-pki-types.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait = "0.1"

[dev-dependencies]
testcontainers.workspace = true
testcontainers-modules.workspace = true
