[package]
name = "sonarqube-bootstrap"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sonarqube-bootstrap"
path = "src/main.rs"

[dependencies]
aws-config.workspace = true
aws-sdk-ssm.workspace = true
lambda_runtime.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rustls.workspace = true
