[package]
name = "auth-trigger"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "auth-trigger"
path = "src/main.rs"

[dependencies]
aws-config.workspace = true
aws-sdk-dynamodb = "1"
aws-sdk-ssm.workspace = true
lambda_runtime.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
