[package]
name = "ci-ingest"
version = "0.1.0"
edition = "2021"

[lib]
name = "ci_ingest"
path = "src/lib.rs"

[[bin]]
name = "ci-ingest"
path = "src/main.rs"

[dependencies]
aws-config.workspace = true
aws-sdk-ssm.workspace = true
lambda_http.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
tokio-postgres-rustls.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
rustls-pki-types.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true

[features]
test-support = []

[dev-dependencies]
ci-ingest = { path = ".", features = ["test-support"] }
testcontainers.workspace = true
testcontainers-modules.workspace = true
tokio-postgres = { workspace = true }
