[package]
name = "db-migrate-truenas"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "db-migrate-truenas"
path = "src/main.rs"

[dependencies]
aws-config.workspace = true
aws-sdk-ssm.workspace = true
lambda_runtime.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
